<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.faisal.wisataquizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha=".08"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4.5dp"
        android:indeterminate="true"
        android:indeterminateDuration="100"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin_main"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_icon"
            android:src="@drawable/icon" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_vertical_text"
            android:text="@string/title_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Masukkan nama anda"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_vertical_text">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_spin"
                android:textColor="@color/black"
                android:textSize="@dimen/title_size" />

            <Spinner
                android:id="@+id/sp_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_vertical_text"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.8dp"
            android:layout_marginLeft="@dimen/margin_vertical_text"
            android:layout_marginTop="-2dp"
            android:layout_marginRight="@dimen/margin_vertical_text"
            android:background="@color/colorAccent"
            android:paddingTop="-2dp" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_main"
            android:background="@color/colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/button_start"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_vertical_8dp"
        android:gravity="center_horizontal"
        android:text="@string/createBy"
        android:textAlignment="center"
        android:textAllCaps="true" />
</RelativeLayout>
